# sandbox

./: .gitignore  Cargo.toml  README.md
debug/: logger.toml
resources/: display_config.ron  test.ron
resources/AnimeMaking/animation/: animation.anim.ron
resources/AnimeMaking/sheet/: sprite000.sheet.ron
resources/box_00_00/animation/: animation.anim.ron
resources/box_00_00/sheet/: sprite000.sheet.ron
resources/character_template1/animation/: animation.anim.ron
resources/character_template1/animation/pack000/: animation000.anim.ron  animation001.anim.ron  animation002.anim.ron  animation003.anim.ron  animation004.anim.ron  animation005.anim.ron  animation006.anim.ron  animation007.anim.ron  animation008.anim.ron  animation009.anim.ron  animation010.anim.ron  animation011.anim.ron  animation012.anim.ron  animation013.anim.ron  animation014.anim.ron  animation015.anim.ron  animation016.anim.ron  animation017.anim.ron  animation018.anim.ron  animation019.anim.ron  animation020.anim.ron  animation021.anim.ron  animation022.anim.ron  animation023.anim.ron  animation024.anim.ron  animation025.anim.ron  animation026.anim.ron  animation027.anim.ron  animation028.anim.ron  animation029.anim.ron  animation030.anim.ron  animation031.anim.ron  animation032.anim.ron  (+2 more)
resources/character_template1/sheet/: sprite000.sheet.ron  sprite001.sheet.ron
resources/command/: basic.com.ron
resources/config/: input.ron
resources/debug/ui/: debug_ui.ron
resources/effect_allcheck/animation/: animation.anim.ron
resources/effect_allcheck/sheet/: sprite000.sheet.ron
resources/houou/animation/: animation.anim.ron  animation000.anim.ron  animation001.anim.ron  animation002.anim.ron  animation003.anim.ron
resources/houou/sheet/: sprite000.sheet.ron
resources/prefab/character/: base.ron  base_0.ron  base_1.ron
resources/sample/animation/: animation.anim.ron
resources/splash1024/animation/: animation.anim.ron
resources/splash1024/sheet/: sprite000.sheet.ron
resources/sprite_studio/: houou.ssae  houou.ssce  houou.sspj
src/: id.rs  main.rs  playfab.rs  prefab.rs  state.rs  types.rs
src/id/: file.rs  pack.rs
src/playfab/: config.rs
src/prefab/: character.rs
src/state/: example.rs  playfab_check.rs
src/types/: translate_animation.rs
(+18 files in other folders)
