[package]
name = "amethyst_sandbox"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = {git = "https://github.com/amethyst/amethyst.git", features = ["vulkan", "sdl_controller"] }
amethyst-sprite-studio={path="../amethyst-sprite-studio/"}
amethyst-collision={path="../amethyst-collision/"}
debug_system={path="../debug_system/"}
fight_game={path = "../fight_game/", features=["debug"]}
input-handle={path="../input-handle/"}
lazy_static="*"
log = "*"
glob="*"
dunce="*"
serde={version="*", features=["derive"]}
anyhow="*"