[package]
name = "amethyst_sandbox"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = {git = "https://github.com/amethyst/amethyst.git", features = ["vulkan", "sdl_controller", "no-slow-safety-checks"] }
amethyst-sprite-studio={path="../amethyst-sprite-studio/"}
amethyst-aabb={path="../amethyst-aabb/"}
debug_system={path="../debug_system/"}
fight_game={path = "../fight_game/"}
input-handle={path="../input-handle/"}
movement-transform={path="../movement-transform/"}
lazy_static= "1.4.0"
log = "0.4.8"
serde={ version = "1.0.105", features = ["derive"] }
anyhow= "1.0.27"

# optional dependencies
toml= { version = "0.5.6", optional = true }

[features]
default=["debug", "profile"]
profile=[
    "amethyst/profiler",
    "fight_game/profiler",
    ]
debug=[
    "toml",
    "fight_game/debug",
    "amethyst-aabb/debug",
    "amethyst-sprite-studio/debug"
]
